@@ -1,5 +1,9 @@
 change log for vectorclass.zip
 ------------------------------
+2015-09-25 version1.18
+  * fix compiler error for Vec8s divide_by_i(Vec8s const & x) under Clang compiler
+  * fix error in Vec4d::size() in vectorf256e.h
+
 
 2015-07-31 version 1.17
   * improved operator > for Vec4uq
@@ -8,6 +12,7 @@ change log for vectorclass.zip
   * template parameter BTYPE renamed to BVTYPE in mathematical functions to avoid clash
     with macro named BTYPE in winnt.h
   * fixed bug in Vec4db constructor
+
 
 2014-10-24 version 1.16
   * workaround for problem in Clang compiler extended to version 3.09 because not fixed yet by Clang
